Specify classes and avoid unnecessary vertical scrollbars

--- a/modules/ifc_models/app/assets/stylesheets/ifc_viewer/generic.sass
+++ b/modules/ifc_models/app/assets/stylesheets/ifc_viewer/generic.sass
@@ -10,8 +10,8 @@
 // The IFC viewer shall fill the viewport to the bottom.
 // This is different to how we style #content else where.
 .controller-ifc_models\/ifc_models
-  overflow-x: hidden
-  
+  overflow: hidden
+
   &.action-show,
   &.action-show_defaults
     #content
@@ -19,21 +19,22 @@
       flex-direction: column
       height: 100%
 
+  // Override default behavior to let the viewer span the whole height
+  @media only screen and (max-width: 679px)
+    #content-wrapper
+      height: calc(100vh - 55px)
+
 [data-name="ifc_models"] .main-menu--children
   overflow-x: hidden !important
 
-.ifc-model-viewer--container
+.ifc-viewer--container
   flex-grow: 1
   position: relative
   width: 100%
   height: 100%
+  overflow: hidden
   border-top: 1px solid $gray-dark
   border-bottom: 1px solid $gray-dark
-
-  .ifc-model-viewer--model-canvas
-    width: 100%
-    height: 100%
-    background: $gray-lighter
 
   .ifc-model-viewer--nav-cube-canvas
     position: absolute
@@ -50,6 +51,16 @@
     top: 50px
     right: 50px
     z-index: 2000
+
+.ifc-model-viewer--container
+  position: relative
+  width: 100%
+  height: 100%
+
+  .ifc-model-viewer--model-canvas
+    width: 100%
+    height: 100%
+    background: $gray-lighter
 
 
 // -------------------------- XEOKIT specific rules for BUTTONS --------------------------
